onlyargs_derive/compile_tests/required_bool.rs
#[derive(Debug, onlyargs_derive::OnlyArgs)]
struct Args {
    #[required]
    required_bool: bool,
}

fn main() {}
